--- a/po/fr.po
+++ b/po/fr.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: unnamed project\n"
+"Project-Id-Version: Eyedropper master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
 "POT-Creation-Date: 2022-09-17 18:17+0200\n"
 "PO-Revision-Date: 2022-09-17 19:31+0200\n"
