--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-09-21 16:06+0200\n"
-"PO-Revision-Date: 2022-09-21 16:09+0200\n"
+"POT-Creation-Date: 2022-09-22 18:09+0200\n"
+"PO-Revision-Date: 2022-09-23 17:19+0200\n"
 "Last-Translator: FineFindus <FineFindusGH@gmail.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -49,7 +49,8 @@ msgid ""
 msgstr ""
 "Wähle eine Farbe vom Bildschirm und betrachte die verschiedenen Farbformate. "
 "Ändere die ausgewählte Farbe, oder wähle eine vorherige ausgewählte Farbe "
-"aus dem Verlauf. Generiere verschiedene Farbtöne basierend auf der ausgewählten Farbe."
+"aus dem Verlauf. Generiere verschiedene Farbtöne basierend auf der "
+"ausgewählten Farbe."
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:14
 msgid "Available Formats:"
@@ -105,7 +106,7 @@ msgstr "Benutzerdefinierte Farbformate im dunklen Modus"
 msgid "Customized color formatting"
 msgstr "Benutzerdefiniertes Farbformate"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:76
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:86
 msgid "FineFindus"
 msgstr "FineFindus"
 
@@ -237,6 +238,11 @@ msgstr "Hexadezimal-Code"
 #: src/window.rs:460
 msgid "Failed to pick a color"
 msgstr "Farbauswahl fehlgeschlagen"
+
+#. Translators: Do not replace the {}. These are used as placeholders for the copied values
+#: src/window.rs:567 src/window.rs:574
+msgid "Copied: “{}”"
+msgstr "“{}” kopiert"
 
 #~ msgid "Choose which formats will be visible"
 #~ msgstr "Wähle welche Farbformate angezeigt werden"
