--- a/po/eu.po
+++ b/po/eu.po
@@ -243,4 +243,4 @@ msgstr "Ezin izan da kolore bat aukeratu"
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
 #: src/window.rs:567 src/window.rs:574
 msgid "Copied: “{}”"
-msgstr "\"{}\" kopiatuta."
+msgstr "“{}” kopiatuta."
