--- a/po/it.po
+++ b/po/it.po
@@ -6,9 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-22 18:09+0200\n"
-"PO-Revision-Date: 2022-09-29 09:14+0200\n"
+"Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
+"POT-Creation-Date: 2022-09-27 20:01+0200\n"
+"PO-Revision-Date: 2022-09-29 12:20+0200\n"
 "Last-Translator: Davide Ferracin <davide.ferracin@protonmail.com>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
-#: data/resources/ui/window.ui:35 src/main.rs:24
+#: data/resources/ui/window.ui:35 src/main.rs:24 src/widgets/about_window.rs:45
 msgid "Eyedropper"
 msgstr "Eyedropper"
 
@@ -39,87 +39,86 @@ msgstr ""
 "eyedropper;tavolozza;contagocce;"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
+#: src/widgets/about_window.rs:75
 msgid "An easy-to-use color picker and editor"
 msgstr "Un selettore ed editor di colori facile da usare"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:10
+#: src/widgets/about_window.rs:78
 msgid ""
 "Pick any color from your screen and view it in different formats. Change the "
 "picked color or go back to a previously picked color from the history list. "
-"Generate a list of different shades fromt he picked color."
+"Generate a list of different shades from the picked color."
 msgstr ""
-"Permette di prelevare qualsiasi colore dal proprio schermo e visualizzarlo in "
-"diversi formati, cambiare il colore selezionato o tornare indietro nella cronologia "
-"a un colore scelto precedentemente, e generare un elenco di varie ombreggiature a "
-"partire dal colore selezionato."
+"Permette di: prelevare qualsiasi colore dal proprio schermo e visualizzarlo "
+"in diversi formati; cambiare il colore selezionato o tornare indietro nella "
+"cronologia a un colore scelto precedentemente; generare un elenco di varie "
+"sfumature a partire dal colore selezionato."
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:14
-msgid "Available Formats:"
-msgstr "Formati disponibili:"
+#: src/widgets/about_window.rs:83
+msgid "Features"
+msgstr "Funzionalità"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:16
-msgid "Hex"
-msgstr "Esadecimale"
+#: src/widgets/about_window.rs:87
+msgid "Pick a Color"
+msgstr "Prelievo colore"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:17
-#: src/widgets/preferences.rs:311
-msgid "RGB"
-msgstr "RGB"
+#: src/widgets/about_window.rs:88
+msgid "Enter a color in Hex-Format"
+msgstr "Inserimento di colori in formato esadecimale"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:18
-#: src/widgets/preferences.rs:319
-msgid "HSL"
-msgstr "HSL"
+#: src/widgets/about_window.rs:89
+msgid "Parse RGBA/ARGB Hex-Colors"
+msgstr "Analisi di colori esadecimali RGBA/ARGB"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:19
-#: src/widgets/preferences.rs:328
-msgid "HSV"
-msgstr "HSV"
+#: src/widgets/about_window.rs:90
+msgid "View colors in Hex, RGB, HSV, HSL, CMYK, XYZ and CIE-Lab format"
+msgstr "Visualizzazione di colori in formato esadecimale, RGB, HSV, HSL, CMYK, XYZ e CIE-Lab"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:20
-#: src/widgets/preferences.rs:337
-msgid "CMYK"
-msgstr "CMYK"
+#: src/widgets/about_window.rs:91
+msgid "Customize which formats appear as well as their order"
+msgstr "Personalizzazione dei formati visibili e del loro ordine"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:21
-#: src/widgets/preferences.rs:346
-msgid "XYZ"
-msgstr "XYZ"
+#: src/widgets/about_window.rs:92
+msgid "Generate a palette of different shades"
+msgstr "Generazione di una tavolozza con varie sfumature"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:22
-#: src/widgets/preferences.rs:355
-msgid "CIELAB"
-msgstr "CIELAB"
-
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:28
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:27
 msgid "Main window dark"
 msgstr "Finestra principale scura"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:32
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:31
 msgid "Main window light"
 msgstr "Finestra principale chiara"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:36
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:35
 msgid "Customized color formatting in dark mode"
 msgstr "Formattazione dei colori personalizzata nel tema scuro"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:40
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:39
 msgid "Customized color formatting"
 msgstr "Formattazione dei colori personalizzata"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:86
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:88
 msgid "FineFindus"
 msgstr "FineFindus"
 
 #: data/resources/ui/color-model-entry.ui:22
 msgctxt "Tooltip of the copy button for format rows"
 msgid "Copy Format"
-msgstr "Copia il formato"
+msgstr "Copia formato"
 
 #: data/resources/ui/hex-entry.ui:22
 msgctxt "Tooltip of the copy button for the hex format"
 msgid "Copy Format"
-msgstr "Copia il formato"
+msgstr "Copia formato"
 
 #: data/resources/ui/preferences.ui:10
 msgid "General"
@@ -219,30 +218,77 @@ msgid "Pick a Color"
 msgstr "Preleva un colore"
 
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
-#: src/application.rs:167
+#: src/widgets/about_window.rs:51
 msgid "translator-credits"
 msgstr "Davide Ferracin <davide.ferracin@protonmail.com>"
 
-#: src/widgets/preferences.rs:214
+#: src/widgets/about_window.rs:111
+msgctxt ""
+"The changelog of the current version. Should be similar to the CHANGELOG.md "
+"file at the project root. Please ensure that the tags have a matching "
+"closing tag. Since xgettext does not recognize rust multiline strings, this "
+"should be on a single line using line breaks (\\n) for new lines."
+msgid ""
+"<p>This is a minor release, improving on the currently available features.</"
+"p>\n"
+"<p> Features:</p>\n"
+"<ul><li> Added new translations</li><li>Fixed minor issues</li></ul>"
+msgstr ""
+"<p>Questa è una versione minore, che migliora le funzionalità attualmente presenti.</"
+"p>\n"
+"<p> Funzionalità:</p>\n"
+"<ul><li> Aggiunte nuove traduzioni</li><li>Corretti errori minori</li></ul>"
+
+#: src/widgets/preferences.rs:226
 msgid "Move Up"
 msgstr "Sposta in alto"
 
-#: src/widgets/preferences.rs:216
+#: src/widgets/preferences.rs:228
 msgid "Move Down"
 msgstr "Sposta in basso"
 
-#: src/widgets/preferences.rs:305
+#: src/widgets/preferences.rs:317
 msgid "Hex-Code"
 msgstr "Codice esadecimale"
 
-#: src/window.rs:460
+#: src/widgets/preferences.rs:323
+msgid "RGB"
+msgstr "RGB"
+
+#: src/widgets/preferences.rs:331
+msgid "HSL"
+msgstr "HSL"
+
+#: src/widgets/preferences.rs:340
+msgid "HSV"
+msgstr "HSV"
+
+#: src/widgets/preferences.rs:349
+msgid "CMYK"
+msgstr "CMYK"
+
+#: src/widgets/preferences.rs:358
+msgid "XYZ"
+msgstr "XYZ"
+
+#: src/widgets/preferences.rs:367
+msgid "CIELAB"
+msgstr "CIELAB"
+
+#: src/window.rs:479
 msgid "Failed to pick a color"
 msgstr "Errore nel prelievo del colore"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:567 src/window.rs:574
+#: src/window.rs:598 src/window.rs:605
 msgid "Copied: “{}”"
 msgstr "Copiato: «{}»"
+
+#~ msgid "Available Formats:"
+#~ msgstr "Formati disponibili:"
+
+#~ msgid "Hex"
+#~ msgstr "Esadecimale"
 
 #~ msgid "Choose which formats will be visible"
 #~ msgstr "Scegliere quali formati saranno visibili"
