--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-09-22 18:09+0200\n"
-"PO-Revision-Date: 2022-09-26 19:06+0200\n"
+"POT-Creation-Date: 2022-09-27 20:01+0200\n"
+"PO-Revision-Date: 2022-10-02 18:25+0200\n"
 "Last-Translator: FineFindus <FineFindusGH@gmail.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -16,11 +16,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.1\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
-#: data/resources/ui/window.ui:35 src/main.rs:24
+#: data/resources/ui/window.ui:35 src/main.rs:24 src/widgets/about_window.rs:45
 msgid "Eyedropper"
 msgstr "Eyedropper"
 
@@ -38,10 +38,12 @@ msgid "Gnome;GTK;Color;Color Picker;Picker;Palette;"
 msgstr "Gnome;GTK;Farben;Farbwähler;Wähler;"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
+#: src/widgets/about_window.rs:75
 msgid "An easy-to-use color picker and editor"
 msgstr "Ein benutzerfreundlicher Farbwähler and Editor"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:10
+#: src/widgets/about_window.rs:78
 msgid ""
 "Pick any color from your screen and view it in different formats. Change the "
 "picked color or go back to a previously picked color from the history list. "
@@ -53,60 +55,58 @@ msgstr ""
 "ausgewählten Farbe."
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:14
-msgid "Available Formats:"
-msgstr "Verfügbare Formate:"
+#: src/widgets/about_window.rs:83
+msgid "Features"
+msgstr "Features"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:16
-msgid "Hex"
-msgstr "Hex"
+#: src/widgets/about_window.rs:87
+msgid "Pick a Color"
+msgstr "Farbe auswählen"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:17
-#: src/widgets/preferences.rs:311
-msgid "RGB"
-msgstr "RGB"
+#: src/widgets/about_window.rs:88
+msgid "Enter a color in Hex-Format"
+msgstr "Trage Farben im Hex-Format ein"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:18
-#: src/widgets/preferences.rs:319
-msgid "HSL"
-msgstr "HSL"
+#: src/widgets/about_window.rs:89
+msgid "Parse RGBA/ARGB Hex-Colors"
+msgstr "Gib Hexfarben im RGBA oder ARGB Format ein"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:19
-#: src/widgets/preferences.rs:328
-msgid "HSV"
-msgstr "HSV"
+#: src/widgets/about_window.rs:90
+msgid "View colors in Hex, RGB, HSV, HSL, CMYK, XYZ and CIE-Lab format"
+msgstr "Zeige Farben im Hex, RGB, HSV, HSL, CMYK, XYZ und CIE-Lab Format"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:20
-#: src/widgets/preferences.rs:337
-msgid "CMYK"
-msgstr "CMYK"
+#: src/widgets/about_window.rs:91
+msgid "Customize which formats appear as well as their order"
+msgstr ""
+"Passe an ob und in welcher Reihenfolge die Farbformate angezeigt werden."
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:21
-#: src/widgets/preferences.rs:346
-msgid "XYZ"
-msgstr "XYZ"
+#: src/widgets/about_window.rs:92
+msgid "Generate a palette of different shades"
+msgstr "Generiere verscheidene Schattierungen einer Farbe"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:22
-#: src/widgets/preferences.rs:355
-msgid "CIELAB"
-msgstr "CIELAB"
-
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:28
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:27
 msgid "Main window dark"
 msgstr "Hauptfenster im dunklen Modus"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:32
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:31
 msgid "Main window light"
 msgstr "Hauptfenster im hellen Modus"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:36
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:35
 msgid "Customized color formatting in dark mode"
 msgstr "Benutzerdefinierte Farbformate im dunklen Modus"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:40
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:39
 msgid "Customized color formatting"
 msgstr "Benutzerdefiniertes Farbformate"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:86
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:88
 msgid "FineFindus"
 msgstr "FineFindus"
 
@@ -219,30 +219,77 @@ msgid "Pick a Color"
 msgstr "Neue Farbe auswählen"
 
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
-#: src/application.rs:167
+#: src/widgets/about_window.rs:51
 msgid "translator-credits"
 msgstr "FineFindus <https://github.com/FineFindus>"
 
-#: src/widgets/preferences.rs:214
+#: src/widgets/about_window.rs:111
+msgctxt ""
+"The changelog of the current version. Should be similar to the CHANGELOG.md "
+"file at the project root. Please ensure that the tags have a matching "
+"closing tag. Since xgettext does not recognize rust multiline strings, this "
+"should be on a single line using line breaks (\\n) for new lines."
+msgid ""
+"<p>This is a minor release, improving on the currently available features.</"
+"p>\n"
+"<p> Features:</p>\n"
+"<ul><li> Added new translations</li><li>Fixed minor issues</li></ul>"
+msgstr ""
+"<p>Eine kleinere Veröffentlichung, welche nur die verfügbaren Features "
+"verbessert.</p>\n"
+"<p> Features:</p>\n"
+"<ul><li> Neue Übersetzungen</li><li>Bugs gefixt</li></ul>"
+
+#: src/widgets/preferences.rs:226
 msgid "Move Up"
 msgstr "Nach oben verschieben"
 
-#: src/widgets/preferences.rs:216
+#: src/widgets/preferences.rs:228
 msgid "Move Down"
 msgstr "Nach unten verschieben"
 
-#: src/widgets/preferences.rs:305
+#: src/widgets/preferences.rs:317
 msgid "Hex-Code"
 msgstr "Hexadezimal-Code"
 
-#: src/window.rs:460
+#: src/widgets/preferences.rs:323
+msgid "RGB"
+msgstr "RGB"
+
+#: src/widgets/preferences.rs:331
+msgid "HSL"
+msgstr "HSL"
+
+#: src/widgets/preferences.rs:340
+msgid "HSV"
+msgstr "HSV"
+
+#: src/widgets/preferences.rs:349
+msgid "CMYK"
+msgstr "CMYK"
+
+#: src/widgets/preferences.rs:358
+msgid "XYZ"
+msgstr "XYZ"
+
+#: src/widgets/preferences.rs:367
+msgid "CIELAB"
+msgstr "CIELAB"
+
+#: src/window.rs:479
 msgid "Failed to pick a color"
 msgstr "Farbauswahl fehlgeschlagen"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:567 src/window.rs:574
+#: src/window.rs:598 src/window.rs:605
 msgid "Copied: “{}”"
 msgstr "„{}” kopiert"
+
+#~ msgid "Available Formats:"
+#~ msgstr "Verfügbare Formate:"
+
+#~ msgid "Hex"
+#~ msgstr "Hex"
 
 #~ msgid "Choose which formats will be visible"
 #~ msgstr "Wähle welche Farbformate angezeigt werden"
